--- a/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh/Pages/LoginPage.xaml
+++ b/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh/Pages/LoginPage.xaml
@@ -39,8 +39,8 @@
       <StackLayout   Orientation="Vertical" IsVisible="{Binding IsLogedInPanelVisible}" >
         <Label Text="Login with" VerticalOptions="Center" HorizontalOptions="Center"/>
         <controls:ImageButton Text="Facebook" BackgroundColor="#3b5998" TextColor="#ffffff" Command="{Binding LoginCommand}" CommandParameter="facebook" Image="Facebook.png" Orientation="ImageToLeft"  />
-        <controls:ImageButton Text="Twitter" BackgroundColor="#55acee" TextColor="#ffffff" Command="{Binding LoginCommand}" CommandParameter="facebook" Image="twitter.png" Orientation="ImageToLeft"  />
-        <controls:ImageButton Text="Google" BackgroundColor="#dd4b39" TextColor="#ffffff" Command="{Binding LoginCommand}" CommandParameter="facebook" Image="google.png" Orientation="ImageToLeft"  />
+        <controls:ImageButton Text="Twitter" BackgroundColor="#55acee" TextColor="#ffffff" Command="{Binding LoginCommand}" CommandParameter="twitter" Image="twitter.png" Orientation="ImageToLeft"  />
+        <controls:ImageButton Text="Google" BackgroundColor="#dd4b39" TextColor="#ffffff" Command="{Binding LoginCommand}" CommandParameter="google" Image="google.png" Orientation="ImageToLeft"  />
       </StackLayout>
       
           <StackLayout Orientation="Vertical" IsVisible="{Binding IsLogedInPanelVisible, Converter={StaticResource InverseBooleanConverter}}">
