--- a/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh/Pages/TaskPage.xaml
+++ b/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh/Pages/TaskPage.xaml
@@ -3,20 +3,125 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WellDoneItXamFresh.Pages.TaskPage"
              xmlns:controls="clr-namespace:XLabs.Forms.Controls;assembly=XLabs.Forms"
-             Title="Task details">
-  <StackLayout Orientation="Vertical">
-    <Entry Text="{Binding WellDoneItTask.Title}"/>
-    <Switch IsToggled="{Binding WellDoneItTask.Complete}" />
-    <DatePicker Date="{Binding WellDoneItTask.DateUtc}" />
-    <StackLayout Orientation="Horizontal">
-      <Label Text="Context: "/>
-      <!--<Picker Items="{Binding WellDoneItContextList}" SelectedIndex="{Binding SelectedContext}"></Picker>-->
-      <!--<fe:BindablePicker ItemsSource="{Binding WellDoneItContextList}" SelectedItem="{Binding SelectedContext}" DisplayProperty="Name" Title="Select Context"></fe:BindablePicker>-->
-      <controls:ExtendedPicker x:Name="myPicker" ItemsSource="{Binding WellDoneItContextList}" DisplayProperty="Name" SelectedItem="{Binding SelectedContext, Mode=TwoWay}"/>
-      <!--<Entry Text="{Binding WellDoneItTask.Context}" MinimumWidthRequest="10"/>-->
-    </StackLayout>
-    <BoxView HeightRequest="30"></BoxView>
-    <Button Text="Save" Command="{Binding SaveCommand}"></Button>
-  </StackLayout>  
-  
+             xmlns:converters="clr-namespace:WellDoneItXamFresh.Converters;assembly=WellDoneItXamFresh"
+             xmlns:views="clr-namespace:WellDoneItXamFresh.Views;assembly=WellDoneItXamFresh"
+             Title="{Binding PageTitle}">
+
+  <ContentPage.ToolbarItems>
+    <ToolbarItem Text="Save"
+    Icon="save.png"
+    Command="{Binding SaveTaskSaveCommand}"
+    Order="Primary"/>
+  </ContentPage.ToolbarItems>
+
+  <ContentPage.Resources>
+    <ResourceDictionary>
+      <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+    </ResourceDictionary>
+  </ContentPage.Resources>
+
+  <!--<ContentPage.Content>
+  <OnPlatform x:TypeArguments="View">
+
+    <OnPlatform.Android>
+
+      <AbsoluteLayout>-->
+
+  <ContentPage.Content>
+
+    <ContentView >
+
+      <ContentView.Content>
+        <OnPlatform x:TypeArguments="View">
+          <OnPlatform.Android>
+
+            <AbsoluteLayout>
+              <AbsoluteLayout.Children>
+                <TableView Intent="Form" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
+                  <TableRoot>
+                    <TableSection Title="Task title">
+                      <EntryCell Label="Title" Text="{Binding WellDoneItTask.Title}" Keyboard="Text" />
+                    </TableSection>
+                    <TableSection Title="Due date">
+                      <ViewCell>
+                        <DatePicker Date="{Binding WellDoneItTask.DateUtc}" />
+                      </ViewCell>
+                    </TableSection>
+                    <TableSection Title="Context">
+                      <ViewCell>
+                        <controls:ExtendedPicker x:Name="myPickerAndroid" Title="Chose context" ItemsSource="{Binding WellDoneItContextList}" DisplayProperty="Name" SelectedItem="{Binding SelectedContext, Mode=TwoWay}"/>
+                      </ViewCell>
+                    </TableSection>
+                    <TableSection >
+                      <ViewCell IsEnabled="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}">
+                        <ContentView Padding="0,0" IsEnabled="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}" HorizontalOptions="Start" IsVisible="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}">
+                          <StackLayout Orientation="Horizontal">
+                            <Label Text="Complete task" TextColor="Gray" HorizontalOptions="Start"/>
+                            <Switch IsToggled="{Binding WellDoneItTask.Complete}" />
+                          </StackLayout>
+                        </ContentView>
+                      </ViewCell>
+                    </TableSection>
+                  </TableRoot>
+                </TableView>
+                <views:FloatingActionButtonView x:Name="fabdel" ImageName="fab_add" ColorNormal="#FF5252" ColorPressed="#E02828" ColorRipple="#2C3E50" AbsoluteLayout.LayoutBounds="1.0, 0.70, AutoSize, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional" IsEnabled="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}" IsVisible="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}"/>
+                <views:FloatingActionButtonView x:Name="fabsav" ImageName="save" ColorNormal="#FF5722" ColorPressed="#E64A19" ColorRipple="#2C3E50" AbsoluteLayout.LayoutBounds="1.0, 1.0, AutoSize, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional" />
+              </AbsoluteLayout.Children>
+            </AbsoluteLayout>
+          </OnPlatform.Android>
+
+          <OnPlatform.iOS>
+            <AbsoluteLayout>
+              <AbsoluteLayout.Children>
+
+                <TableView Intent="Form" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
+                  <TableRoot>
+                    <TableSection Title="Task title">
+                      <EntryCell Label="Title" Text="{Binding WellDoneItTask.Title}" Keyboard="Text" />
+                    </TableSection>
+                    <TableSection Title="Due date">
+                      <ViewCell>
+                        <DatePicker Date="{Binding WellDoneItTask.DateUtc}" />
+                      </ViewCell>
+                    </TableSection>
+                    <TableSection Title="Context">
+                      <ViewCell>
+                        <controls:ExtendedPicker x:Name="myPickerIOS" Title="Chose context" ItemsSource="{Binding WellDoneItContextList}" DisplayProperty="Name" SelectedItem="{Binding SelectedContext, Mode=TwoWay}"/>
+                      </ViewCell>
+                    </TableSection>
+                    <TableSection >
+                      <ViewCell IsEnabled="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}">
+                        <ContentView Padding="0,0" IsEnabled="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}" HorizontalOptions="Start" IsVisible="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}">
+                          <StackLayout Orientation="Horizontal">
+                            <Label Text="Complete task" TextColor="Gray" HorizontalOptions="Start"/>
+                            <Switch IsToggled="{Binding WellDoneItTask.Complete}" />
+                          </StackLayout>
+                        </ContentView>
+                      </ViewCell>
+                    </TableSection>
+                    <TableSection >
+                      <ViewCell IsEnabled="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}">
+                        <ContentView Padding="0,0" IsEnabled="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}" IsVisible="{Binding isNewTask, Converter={StaticResource InverseBooleanConverter}}">
+                          <ContentView.Padding>
+                            <OnPlatform x:TypeArguments="Thickness" iOS="10,0" WinPhone="0,15,0,0" />
+                          </ContentView.Padding>
+                          <ContentView.Content>
+                            <StackLayout>
+                              <Button BackgroundColor="#fd6d6d" Text="Delete this task" TextColor="White" Command="{Binding DeleteTaskCommand}" />
+                            </StackLayout>
+                          </ContentView.Content>
+                        </ContentView>
+                      </ViewCell>
+                    </TableSection>
+                  </TableRoot>
+                </TableView>
+              </AbsoluteLayout.Children>
+            </AbsoluteLayout>
+          </OnPlatform.iOS>
+        </OnPlatform>
+      </ContentView.Content>
+
+    </ContentView>
+  </ContentPage.Content>
+
 </ContentPage>
